cmss/main/default/objects/Activity/Activity.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>