cmss/main/default/objects/Activity/fields/AccountAlias__c.field-meta.xml
<CustomField>
    <fullName>AccountAlias__c</fullName>
    <label>Account Alias</label>
    <length>50</length>
    <type>Text</type>
</CustomField>