cmss/main/default/objects/Activity/fields/ActivityLink__c.field-meta.xml
<CustomField>
    <fullName>ActivityLink__c</fullName>
    <description>Link to Activity for assigned user</description>
    <formula>IF(ISBLANK(Owner:User.ContactId)
,  $Setup.TaskLink__c.LightningLink__c &amp;  Id  &amp;&quot;/view&quot;  
,  $Setup.TaskLink__c.CommunityLink__c  &amp;  Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Link</label>
    <type>Text</type>
</CustomField>