cmss/main/default/objects/Activity/fields/ActivityType__c.field-meta.xml
<CustomField>
    <fullName>ActivityType__c</fullName>
    <label>Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>