cmss/main/default/objects/Activity/fields/ActivityTypeColor__c.field-meta.xml
<CustomField>
    <fullName>ActivityTypeColor__c</fullName>
    <formula>CASE( ActivityType__c, 					 
&apos;1&apos;, IMAGE(&quot;/img/samples/color_yellow.gif &quot;,&quot;yellow&quot;,20, 70), 
&apos;3&apos;, IMAGE(&quot;/img/samples/color_yellow.gif &quot;,&quot;yellow&quot;,20, 70), 
&apos;4&apos;, IMAGE(&quot;/img/samples/color_green.gif &quot;,&quot;green&quot;,20, 70),
&apos;2&apos;, IMAGE(&quot;/img/samples/color_green.gif &quot;,&quot;green&quot;,20, 70),
&apos;5&apos;, IMAGE(&quot;/img/samples/color_red.gif &quot;,&quot;red&quot;,20, 70),
&quot;default&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activity Type Color</label>
    <type>Text</type>
</CustomField>