cmss/main/default/objects/Activity/fields/AssignedToCurrentUser__c.field-meta.xml
<CustomField>
    <fullName>AssignedToCurrentUser__c</fullName>
    <description>Checks if Assigned To User ID is the same as Current User ID</description>
    <formula>Owner:User.Id = $User.Id</formula>
    <label>Assigned To Current User</label>
    <type>Checkbox</type>
</CustomField>