cmss/main/default/objects/Activity/fields/Author__c.field-meta.xml
<CustomField>
    <fullName>Author__c</fullName>
    <description>Commission Account Nr. of record author</description>
    <label>Author</label>
    <length>255</length>
    <type>Text</type>
</CustomField>