cmss/main/default/objects/Activity/fields/CallActualEnd__c.field-meta.xml
<CustomField>
    <fullName>CallActualEnd__c</fullName>
    <description>Skutečný čas ukončení aktivity telefonního hovoru</description>
    <label>Call Actual End</label>
    <type>DateTime</type>
</CustomField>