cmss/main/default/objects/Activity/fields/CallDirectionCode__c.field-meta.xml
<CustomField>
    <fullName>CallDirectionCode__c</fullName>
    <description>Kód směru telefonního hovoru (příchozí nebo odchozí)</description>
    <label>Call Direction Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>