cmss/main/default/objects/Activity/fields/CampaignMember__c.field-meta.xml
<CustomField>
    <fullName>CampaignMember__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Campaign Member</label>
    <referenceTo>CampaignMember__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>