cmss/main/default/objects/Activity/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>