cmss/main/default/objects/Activity/fields/DelegatedDate__c.field-meta.xml
<CustomField>
    <fullName>DelegatedDate__c</fullName>
    <description>Datum delegování</description>
    <label>Delegated Date</label>
    <type>DateTime</type>
</CustomField>