cmss/main/default/objects/Activity/fields/eDocumentLink__c.field-meta.xml
<CustomField>
    <fullName>eDocumentLink__c</fullName>
    <formula>HYPERLINK(&quot;/apex/eDocumentPage?recordId=&quot; +  Id,  $Label.Link , &quot;_blank&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>eDocument Link</label>
    <type>Text</type>
</CustomField>