cmss/main/default/objects/Activity/fields/GoogleId__c.field-meta.xml
<CustomField>
    <fullName>GoogleId__c</fullName>
    <externalId>true</externalId>
    <label>Google Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>