cmss/main/default/objects/Activity/fields/GoogleLink__c.field-meta.xml
<CustomField>
    <fullName>GoogleLink__c</fullName>
    <label>Google Link</label>
    <length>100</length>
    <type>Text</type>
</CustomField>