cmss/main/default/objects/Activity/fields/HouseNumber__c.field-meta.xml
<CustomField>
    <fullName>HouseNumber__c</fullName>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>House Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>