cmss/main/default/objects/Activity/fields/InternalAttendee__c.field-meta.xml
<CustomField>
    <fullName>InternalAttendee__c</fullName>
    <label>Internal Attendee</label>
    <length>255</length>
    <type>Text</type>
</CustomField>