cmss/main/default/objects/Activity/fields/IsClosedNegative__c.field-meta.xml
<CustomField>
    <fullName>IsClosedNegative__c</fullName>
    <description>Uzavřeno negativně</description>
    <formula>IF( ISPICKVAL(Status, &apos;4&apos;), true, false)</formula>
    <label>Is Closed Negative</label>
    <type>Checkbox</type>
</CustomField>