cmss/main/default/objects/Activity/fields/IsClosedPositive__c.field-meta.xml
<CustomField>
    <fullName>IsClosedPositive__c</fullName>
    <description>Pozitivně uzavřeno</description>
    <formula>IF(ISPICKVAL(Status, &apos;3&apos;), true, false)</formula>
    <label>Is Closed Positive</label>
    <type>Checkbox</type>
</CustomField>