cmss/main/default/objects/Activity/fields/IsFromGoogle__c.field-meta.xml
<CustomField>
    <fullName>IsFromGoogle__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is From Google</label>
    <type>Checkbox</type>
</CustomField>