cmss/main/default/objects/Activity/fields/IsKZMessage__c.field-meta.xml
<CustomField>
    <fullName>IsKZMessage__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is KZ Message</label>
    <type>Checkbox</type>
</CustomField>