cmss/main/default/objects/Activity/fields/IsRead__c.field-meta.xml
<CustomField>
    <fullName>IsRead__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Read</label>
    <type>Checkbox</type>
</CustomField>