cmss/main/default/objects/Activity/fields/IsVisibleForNel__c.field-meta.xml
<CustomField>
    <fullName>IsVisibleForNel__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Visible For Nel</label>
    <type>Checkbox</type>
</CustomField>