cmss/main/default/objects/Activity/fields/LetterId__c.field-meta.xml
<CustomField>
    <fullName>LetterId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LetterId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>