cmss/main/default/objects/Activity/fields/LetterType__c.field-meta.xml
<CustomField>
    <fullName>LetterType__c</fullName>
    <label>LetterType</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A003</fullName>
            </value>
            <value>
                <fullName>A011</fullName>
            </value>
            <value>
                <fullName>A014</fullName>
            </value>
            <value>
                <fullName>A015</fullName>
            </value>
            <value>
                <fullName>A016</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>