cmss/main/default/objects/Activity/fields/MainAccountEmail__c.field-meta.xml
<CustomField>
    <fullName>MainAccountEmail__c</fullName>
    <label>Main E-mail</label>
    <type>Email</type>
</CustomField>