cmss/main/default/objects/Activity/fields/MainAccountPhone__c.field-meta.xml
<CustomField>
    <fullName>MainAccountPhone__c</fullName>
    <label>Main Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>