cmss/main/default/objects/Activity/fields/OpportunityExternalId__c.field-meta.xml
<CustomField>
    <fullName>OpportunityExternalId__c</fullName>
    <formula>Opportunity__r.ExternalId__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity External Id</label>
    <type>Text</type>
</CustomField>