cmss/main/default/objects/Activity/fields/PersonalIdentificationNr__c.field-meta.xml
<CustomField>
    <fullName>PersonalIdentificationNr__c</fullName>
    <description>Personal Identification Number of Client linked to the Activity</description>
    <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
    <label>Personal Identification Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>