cmss/main/default/objects/Activity/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <description>Telefonní číslo přidružené k aktivitě telefonního hovoru</description>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>