cmss/main/default/objects/Activity/fields/Place__c.field-meta.xml
<CustomField>
    <fullName>Place__c</fullName>
    <description>Místo konání</description>
    <label>Place</label>
    <length>255</length>
    <type>Text</type>
</CustomField>