cmss/main/default/objects/Activity/fields/PlannedFromDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedFromDate__c</fullName>
    <label>Planned From Date</label>
    <type>DateTime</type>
</CustomField>