cmss/main/default/objects/Activity/fields/PlannedToDate__c.field-meta.xml
<CustomField>
    <fullName>PlannedToDate__c</fullName>
    <label>Planned To Date</label>
    <type>DateTime</type>
</CustomField>