cmss/main/default/objects/Activity/fields/PostCode__c.field-meta.xml
<CustomField>
    <fullName>PostCode__c</fullName>
    <label>Post Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>