cmss/main/default/objects/Activity/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Activities</relationshipName>
    <type>Lookup</type>
</CustomField>