cmss/main/default/objects/Activity/fields/RecipientRole__c.field-meta.xml
<CustomField>
    <fullName>RecipientRole__c</fullName>
    <label>RecipientRole</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>7</fullName>
            </value>
            <value>
                <fullName>8</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>102</fullName>
            </value>
            <value>
                <fullName>103</fullName>
            </value>
            <value>
                <fullName>104</fullName>
            </value>
            <value>
                <fullName>105</fullName>
            </value>
            <value>
                <fullName>106</fullName>
            </value>
            <value>
                <fullName>107</fullName>
            </value>
            <value>
                <fullName>108</fullName>
            </value>
            <value>
                <fullName>109</fullName>
            </value>
            <value>
                <fullName>110</fullName>
            </value>
            <value>
                <fullName>201</fullName>
            </value>
            <value>
                <fullName>202</fullName>
            </value>
            <value>
                <fullName>203</fullName>
            </value>
            <value>
                <fullName>204</fullName>
            </value>
            <value>
                <fullName>205</fullName>
            </value>
            <value>
                <fullName>206</fullName>
            </value>
            <value>
                <fullName>207</fullName>
            </value>
            <value>
                <fullName>208</fullName>
            </value>
            <value>
                <fullName>209</fullName>
            </value>
            <value>
                <fullName>210</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>