cmss/main/default/objects/Activity/fields/Sender__c.field-meta.xml
<CustomField>
    <fullName>Sender__c</fullName>
    <description>Informace o tom, kdo je iniciátorem telefonního hovoru</description>
    <label>Sender</label>
    <length>32</length>
    <type>Text</type>
</CustomField>