cmss/main/default/objects/Activity/fields/ServiceCategory__c.field-meta.xml
<CustomField>
    <fullName>ServiceCategory__c</fullName>
    <label>Service Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>