cmss/main/default/objects/Activity/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>Summary</label>
    <type>TextArea</type>
</CustomField>