cmss/main/default/objects/Activity/fields/TakeOverDate__c.field-meta.xml
<CustomField>
    <fullName>TakeOverDate__c</fullName>
    <description>Datum, kdy uživatel poprvé změní stav na hodnotu odpovídající převzatému stavu</description>
    <label>Take Over Date</label>
    <type>DateTime</type>
</CustomField>