cmss/main/default/objects/Activity/fields/UpdateDate__c.field-meta.xml
<CustomField>
    <fullName>UpdateDate__c</fullName>
    <description>Naposledy upraveno</description>
    <label>Update Date</label>
    <type>DateTime</type>
</CustomField>