cmss/main/default/objects/Activity/fields/UpdatedBy__c.field-meta.xml
<CustomField>
    <fullName>UpdatedBy__c</fullName>
    <description>Commission Account Nr. of record update author</description>
    <label>Updated By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>