cmss/main/default/objects/Activity/fields/UserNote__c.field-meta.xml
<CustomField>
    <fullName>UserNote__c</fullName>
    <description>Poznámka OZ</description>
    <label>User Note</label>
    <type>TextArea</type>
</CustomField>