cmss/main/default/objects/Activity/fields/WebLink__c.field-meta.xml
<CustomField>
    <fullName>WebLink__c</fullName>
    <label>Web Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>